# jota-news-backend

./: README.md  manage.py  pyproject.toml
jotanews/: asgi.py  settings.py  urls.py  wsgi.py
jotanews/apps/useraccounts/: models.py
jotanews/core/mixins/models/: audit.py  uuid.py
