[tool.poetry]
name = "jota-news-backend"
version = "0.1.0"
description = "Back-End Python and Django Case for JOTA Company Seletive Process"
authors = ["WillamesCampos <willwjccampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = "^3.16.0"
celery = "^5.5.2"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
